# HOSKYSWAP.Validator

./: .gitignore  cabal.project
hosky-swap-compiler/: hosky-swap-compiler.cabal
hosky-swap-compiler/app/: Main.hs
hosky-swap-emulator/: hosky-swap-emulator.cabal
hosky-swap-emulator/app/: HSSwapEmulator.hs
hosky-swap-ui-prototype/: CardanoLoader.ts  VTClaimRedeemers.ts  app.ts  coinSelection.ts  contract.ts  global.d.ts  index.html  languageViews.ts  package-lock.json  package.json  vaporizeContract.ts  vtClaimContract.ts  webpack.config.js
hosky-swap-ui-prototype/Types/: CardanoAsset.ts  CardanoChainData.ts  CardanoChainDataField.ts  CardanoDAppConnector.ts  CardanoProtocolParam.ts  PlutusDataObject.ts  PlutusField.ts  VaporizeAction.ts
hosky-swap-ui-prototype/wwwroot/: app.js  index.html
hosky-swap-validator/: hosky-swap.cabal
hosky-swap-validator/app/: HSSwapCommon.hs  HSSwapOffchain.hs  HSSwapValidator.hs
scripts/: hosky-swap.plutus  result.plutus
