cabal-version:      2.4
name:               hosky-swap-compiler
description:        Compiler for Plutus Swap Validator
author:             SAIB
maintainer:         hello@saib.dev
version:            0.1.0.0

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

executable HoskySwapCompiler
    import:               base, project-config
    hs-source-dirs:       app
    main-is:              Main.hs
    ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

    build-depends:        cardano-api
                        , cardano-ledger-alonzo
                        , plutus-ledger
                        , plutus-ledger-api
                        , bytestring
                        , plutus-tx
                        , hosky-swap-validator
                        , aeson
